Fixed topnav dropdown menus covering other links

--- a/CSS/universal.css
+++ b/CSS/universal.css
@@ -163,12 +163,6 @@ body:nth-child(2) {
         right: 0;
     }
 
-    .topnav.responsive .dropdown, .topnav.responsive .dropdown-btn {
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
-
     .topnav.responsive a {
         float: none;
         display: block;
@@ -180,8 +174,13 @@ body:nth-child(2) {
     }
 
     .topnav.responsive .dropdown-links {
+        position: relative;
+    }
+
+    .topnav.responsive .dropdown, .topnav.responsive .dropdown-btn {
+        display: block;
         width: 100%;
-        position: fixed;
+        text-align: left;
     }
 }
 
